@@ -65,8 +65,7 @@ grl.GRLFile: ${ROOTCOREBIN}/data/SUSYTools/GRL/Summer2013/data12_8TeV.periodAllY
 
 
 # ---------------------------  systematics looper -----------------
-systloop.Run: ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt) ZeroLeptonCRZ(crz) ZeroLeptonCRY(cry)
-#systloop.Run: ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt) 
+systloop.Run: ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt) ZeroLeptonCRWT(crwtl) ZeroLeptonCRWT(vrwtl) ZeroLeptonCRZ(crz) ZeroLeptonCRY(cry)
 
 # ---------------------------  Build physics objects -----------------
 susyobjs.IsData: %{Global.IsData}
@@ -112,6 +111,29 @@ vrwt.DerivationTag: %{Global.DerivationTag}
 vrwt.fillTRJigsawVars: %{Global.fillTRJigsawVars}
 #vrwt.doRecl: %{Global.doRecl}  
 #vrwt.suffixRecl: vrwt 
+
+# ---------------------------  CRWT Region MET trigger -----------------
+crwtl.IsData: %{Global.IsData}
+crwtl.cutfile: %{Global.cutfile}
+crwtl.IsSignal: %{Global.IsSignal}
+crwtl.DoSystematics: %{Global.DoSystematics}
+crwtl.Period: %{Global.Period}
+crwtl.DerivationTag: %{Global.DerivationTag}
+crwtl.fillTRJigsawVars: %{Global.fillTRJigsawVars}
+crwtl.LowPtLepton: TRUE
+
+# ---------------------------  VRWT Region MET trigger -----------------
+vrwtl.IsData: %{Global.IsData}
+vrwtl.cutfile: %{Global.cutfile}
+vrwtl.IsVR: TRUE
+vrwtl.IsSignal: %{Global.IsSignal}
+vrwtl.DoSystematics: %{Global.DoSystematics}
+vrwtl.Period: %{Global.Period}
+vrwtl.DerivationTag: %{Global.DerivationTag}
+vrwtl.fillTRJigsawVars: %{Global.fillTRJigsawVars}
+#vrwt.doRecl: %{Global.doRecl}  
+#vrwt.suffixRecl: vrwt 
+vrwtl.LowPtLepton: TRUE
 
 # ---------------------------  CRZ Region -----------------
 crz.IsData: %{Global.IsData}
